crates/aven-check/tests/fixtures/check/invalid/type-only-record-entry.av
value = { phone? = "123", .._ }
